# RM

./: CMakeLists.txt
Hough_transform/: CMakeLists.txt  main.cpp
RubikCubeColorDetect/: CMakeLists.txt  main.cpp
RubikCubeColorDetect/Rubik'sCubeColorDetectPython/: detect.py
camera/: CMakeLists.txt  Calibration.cpp  Calibration.h  CameraDS.cpp~  CameraDS.h~  PNPsolver.cpp  PNPsolver.h  README.md  RMCamera.cpp  RMCamera.h  RMVideoCapture.cpp  RMVideoCapture.hpp
camera/include/: CMakeLists.txt  MvCameraControl.h
image_segmentation/: .~图像分割.pptx  图像分割.pptx  图像分割任务.docx
object_detection/: CMakeLists.txt  main.cpp
object_detection/armorFind_demo/: CMakeLists.txt  Header.h  armorfind.cpp  armorfind.h  main.cpp
rubiks3-solve/RubikCubeColorDetect/: main.cpp
rubiks3-solve/SW/: 6623.SLDPRT  夹具.SLDPRT  零件2.SLDPRT  魔方.rar
rubiks3-solve/Xcode/Rubiks Cube Solver/: CubeDetector.cpp  CubeDetector.hpp  main.cpp
serial/: Policy.cpp  Policy.h  algorithmOfCRC.cpp  algorithmOfCRC.h  pid.cpp  pid.h  串口通信.pptx
